--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "standard": "^17.1.0"
-  },"eslintConfig": {"extends":"standard"}
+    "standard": "17.1.0"
+  },
+  "eslintConfig": {"extends":"./node_modules/standard/eslintrc.json"}
 }
